--- a/package.xml
+++ b/package.xml
@@ -57,6 +57,7 @@
   <depend>laser_geometry</depend>
   <depend>tf</depend>
   <depend>sensor_msgs</depend>
+  <depend>DecompUtil</depend>
   <exec_depend>message_generation</exec_depend>
 
 
