Dirty quick push

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf
   sensor_msgs
+  geometry_msgs
+  nav_msgs
   genmsg
   mm_msgs
 )
@@ -38,92 +40,24 @@ find_package(decomp_util REQUIRED)
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
 catkin_python_setup()
 
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend tag for "message_generation"
-##   * add a build_depend and a exec_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
-##     but can be declared for certainty nonetheless:
-##     * add a exec_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
-
-## Generate messages in the 'msg' folder
-
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
 ## Generate actions in the 'action' folder
 add_action_files(
   DIRECTORY action
-  FILES mpc.action
+  FILES
+    mpc.action
+    simpleMpc.action
 )
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
-  DEPENDENCIES actionlib_msgs std_msgs  # Or other packages containing msgs
+  DEPENDENCIES
+    actionlib_msgs
+    std_msgs
+    mm_msgs
 )
-
-################################################
-## Declare ROS dynamic reconfigure parameters ##
-################################################
-
-## To declare and build dynamic reconfigure parameters within this
-## package, follow these steps:
-## * In the file package.xml:
-##   * add a build_depend and a exec_depend tag for "dynamic_reconfigure"
-## * In this file (CMakeLists.txt):
-##   * add "dynamic_reconfigure" to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * uncomment the "generate_dynamic_reconfigure_options" section below
-##     and list every .cfg file to be processed
-
-## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
-
-###################################
-## catkin specific configuration ##
-###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if your package contains header files
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   CATKIN_DEPENDS actionlib_msgs
 )
-#  INCLUDE_DIRS include
-#  LIBRARIES mobile_mpc
-#  DEPENDS system_lib
-
-###########
-## Build ##
-###########
-
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
 include_directories(
   include
   #acado/generated_mpc
@@ -131,12 +65,14 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
   ${EIGEN3_INCLUDE_DIRS}
   ${DECOMP_UTIL_INCLUDE_DIRS}
+  forcesLib/simpleMPC/simplempc/include
 )
 if(STATIC_MPC EQUAL 1)
   include_directories(forcesLib/mobileManipulator/static_spheres/mm_MPC/include)
 else(STATIC_MPC EQUAL 1)
   include_directories(forcesLib/mobileManipulator/decomp_util/mm_MPC/include)
 endif(STATIC_MPC EQUAL 1)
+
   
 
 ## Declare a C++ library
@@ -194,6 +130,16 @@ target_link_libraries(forces_converter_test mpc_lib)
 #target_link_libraries(mpc_acado_solver_test mpc_lib)
 catkin_add_gtest(mpc_forces_solver_test test/mpc_forces_solver_test.cpp)
 target_link_libraries(mpc_forces_solver_test mpc_lib)
+
+# Simple isolated planner 
+add_executable(mpcplanner
+  src/mpcPlanner.cpp
+)
+
+target_link_libraries(mpcplanner
+  ${CMAKE_SOURCE_DIR}/forcesLib/simpleMPC/simplempc/lib/libsimplempc_withModel.so
+  ${catkin_LIBRARIES}
+)
   
 
 add_executable(decomp_node
@@ -210,6 +156,7 @@ add_executable(laserScan_assem
 target_link_libraries(laserScan_assem
   ${catkin_LIBRARIES}
 )
+
 
 # Activate Debug mode
 # set(CMAKE_BUILD_TYPE Debug)
