--- a/package.xml
+++ b/package.xml
@@ -51,6 +51,7 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <depend>mobile_manipulator</depend>
+  <depend>moveit</depend>
   <depend>mm_msgs</depend>
   <depend>mobile_control</depend>
   <depend>actionlib_msgs</depend>
@@ -58,6 +59,7 @@
   <depend>tf</depend>
   <depend>sensor_msgs</depend>
   <depend>DecompUtil</depend>
+  <depend>velocity_controllers</depend>
   <exec_depend>message_generation</exec_depend>
 
 
